--- a/src/main/resources/com/mycompany/tictactoe/views/Login.fxml
+++ b/src/main/resources/com/mycompany/tictactoe/views/Login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%,#E40078 0%,#C800B0 40%,#7A3DF0 65%,#205CFC 100% );" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.tictactoe.controllers.AndrewFXMLController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%,#E40078 0%,#C800B0 40%,#7A3DF0 65%,#205CFC 100% );" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.tictactoe.controllers.LoginController">
    <top>
       <TextFlow prefHeight="93.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -58,37 +59,41 @@
    <center>
       <Pane BorderPane.alignment="CENTER">
          <children>
-            <Pane layoutX="210.0" prefHeight="355.0" prefWidth="503.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-background-color: transparent; -fx-border-color: white; -fx-background-color: #ffffff4e;" />
+            <Pane layoutX="210.0" prefHeight="355.0" prefWidth="503.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-background-color: transparent; -fx-border-color: white; -fx-background-color: #ffffff4e;">
+               <children>
+                  <PasswordField fx:id="userPassword" layoutX="72.0" layoutY="148.0" onAction="#userPassword" prefHeight="60.0" prefWidth="360.0" promptText="Enter your password" style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: black;" text="dfgdfgdf" />
+                  <Text fill="WHITE" layoutX="72.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Text>
+               </children></Pane>
             <AnchorPane layoutX="179.0" layoutY="24.0" prefHeight="0.0" prefWidth="127.0" />
-            <TextField fx:id="username" blendMode="SCREEN" cache="true" layoutX="281.0" layoutY="60.0" onAction="#usernameTextField" prefHeight="60.0" prefWidth="360.0" promptText="Enter your username" style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: white; -fx-text-fill: white;">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></TextField>
+            <TextField fx:id="username" cache="true" layoutX="281.0" layoutY="60.0" onAction="#usernameTextField" prefHeight="60.0" prefWidth="360.0" promptText="Enter your username" style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: black;" />
             <AnchorPane layoutX="179.0" layoutY="100.0" prefHeight="3.0" prefWidth="38.0" />
-            <TextField fx:id="userPassword" blendMode="SCREEN" layoutX="281.0" layoutY="155.0" onAction="#userPasswordTextField" prefHeight="60.0" prefWidth="360.0" promptText="Enter your password" style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: white; -fx-text-fill: white;">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></TextField>
             <Button fx:id="loginButton" layoutX="281.0" layoutY="229.0" mnemonicParsing="false" onAction="#loginButton" prefHeight="60.0" prefWidth="360.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #ec4899, #7c3aed); -fx-background-radius: 15;" text="Login" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font></Button>
+            <ImageView fitHeight="27.0" fitWidth="17.0" layoutX="423.0" layoutY="251.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../assets/1-login.png" />
+               </image>
+            </ImageView>
             <Text fill="WHITE" layoutX="344.0" layoutY="310.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Don`t have an account? " wrappingWidth="281.78204345703125">
                <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Text>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Text>
             <Text fill="WHITE" layoutX="278.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Text>
-            <Text fill="WHITE" layoutX="279.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
+            <Text fx:id="registerPage" layoutX="507.0" layoutY="309.0" onDragDetected="#toRegisterPage" strokeType="OUTSIDE" strokeWidth="0.0" text="Register here" underline="true">
                <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Text>
-            <Text fx:id="registerPage" fill="WHITE" layoutX="485.0" layoutY="310.0" onDragDetected="#toRegisterPage" strokeType="OUTSIDE" strokeWidth="0.0" text="Register here" underline="true">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Text>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Text>
          </children>
          <opaqueInsets>
             <Insets />
