--- a/src/main/resources/com/mycompany/tictactoe/views/Login.fxml
+++ b/src/main/resources/com/mycompany/tictactoe/views/Login.fxml
@@ -6,101 +6,100 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.text.TextFlow?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%,#E40078 0%,#C800B0 40%,#7A3DF0 65%,#205CFC 100% );" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.tictactoe.controllers.LoginController">
-   <top>
-      <TextFlow prefHeight="93.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+
+<BorderPane fx:id="myBorder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%,#E40078 0%,#C800B0 40%,#7A3DF0 65%,#205CFC 100% );" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.tictactoe.controllers.LoginController">
+   <padding>
+      <Insets top="20.0" />
+   </padding>
+   <center>
+      <StackPane prefHeight="345.0" prefWidth="900.0" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane layoutY="200.0" prefHeight="106.0" prefWidth="628.0">
+            <Pane maxHeight="354.0" maxWidth="538.0" prefHeight="354.0" prefWidth="538.0" style="-fx-border-color: white; -fx-background-radius: 50; -fx-border-radius: 50; -fx-background-color: transparent; -fx-background-color: #ffffff4e;" StackPane.alignment="CENTER">
+               <StackPane.margin>
+                  <Insets />
+               </StackPane.margin>
                <children>
-                  <Text fill="#f2f2f2" layoutX="175.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tic Tac Toe" textAlignment="CENTER" wrappingWidth="549.2664184570312">
+                  <TextField fx:id="username" layoutX="87.0" layoutY="62.0" onAction="#usernameTextField" prefHeight="60.0" prefWidth="360.0" promptText="Enter your username" style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: black;" />
+                  <Button fx:id="loginButton" layoutX="89.0" layoutY="227.0" mnemonicParsing="false" onAction="#loginButton" prefHeight="60.0" prefWidth="360.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #ec4899, #7c3aed); -fx-background-radius: 15;" text="Login" textFill="WHITE">
                      <font>
-                        <Font size="37.0" />
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <PasswordField fx:id="userPassword" layoutX="87.0" layoutY="154.0" onAction="#userPassword" prefHeight="60.0" prefWidth="360.0" promptText="Enter your password" style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: black;" />
+                  <Text fill="WHITE" layoutX="140.0" layoutY="310.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Don`t have an account? " wrappingWidth="281.78204345703125">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
                      </font>
                   </Text>
-                  <Text fill="#67cbdf" layoutX="404.0" layoutY="87.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome Back">
+                  <Text fx:id="registerPage" layoutX="299.0" layoutY="309.0" onDragDetected="#toRegisterPage" strokeType="OUTSIDE" strokeWidth="0.0" text="Register here" underline="true">
                      <font>
-                        <Font name="System Bold" size="16.0" />
-                     </font></Text>
-                  <ImageView fitHeight="33.0" fitWidth="27.0" layoutX="320.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" layoutX="95.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" layoutX="96.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Text>
+                  <ImageView fitHeight="27.0" fitWidth="17.0" layoutX="224.0" layoutY="249.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../assets/flash1.png" />
+                        <Image url="@../../../../assets/1-login.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="33.0" fitWidth="27.0" layoutX="547.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+               </children>
+            </Pane>
+         </children>
+      </StackPane>
+   </center>
+   <top>
+      <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Pane maxHeight="200.0" maxWidth="200.0">
+               <children>
+                  <Text fill="#f2f2f2" layoutX="-175.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tic Tac Toe" textAlignment="CENTER" wrappingWidth="549.2664184570312">
+                     <font>
+                        <Font size="45.0" />
+                     </font>
+                  </Text>
+                  <ImageView fitHeight="33.0" fitWidth="27.0" layoutX="-39.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../../../assets/flash2.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" layoutX="524.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="23.0" fitWidth="27.0" layoutX="14.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../../../assets/starts.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" layoutX="373.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
+                  <Text fill="#67cbdf" layoutX="53.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome Back">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Text>
+                  <ImageView fitHeight="33.0" fitWidth="27.0" layoutX="212.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../assets/flash1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="23.0" fitWidth="27.0" layoutX="175.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../../../assets/starts.png" />
                      </image>
                   </ImageView>
                </children>
-            </AnchorPane>
+            </Pane>
          </children>
-         <padding>
-            <Insets bottom="20.0" />
-         </padding>
-      </TextFlow>
+      </StackPane>
    </top>
-   <center>
-      <Pane BorderPane.alignment="CENTER">
-         <children>
-            <Pane layoutX="210.0" prefHeight="355.0" prefWidth="503.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-background-color: transparent; -fx-border-color: white; -fx-background-color: #ffffff4e;">
-               <children>
-                  <PasswordField fx:id="userPassword" layoutX="72.0" layoutY="148.0" onAction="#userPassword" prefHeight="60.0" prefWidth="360.0" promptText="Enter your password" style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: black;" text="dfgdfgdf" />
-                  <Text fill="WHITE" layoutX="72.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Text>
-               </children></Pane>
-            <AnchorPane layoutX="179.0" layoutY="24.0" prefHeight="0.0" prefWidth="127.0" />
-            <TextField fx:id="username" cache="true" layoutX="281.0" layoutY="60.0" onAction="#usernameTextField" prefHeight="60.0" prefWidth="360.0" promptText="Enter your username" style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: black;" />
-            <AnchorPane layoutX="179.0" layoutY="100.0" prefHeight="3.0" prefWidth="38.0" />
-            <Button fx:id="loginButton" layoutX="281.0" layoutY="229.0" mnemonicParsing="false" onAction="#loginButton" prefHeight="60.0" prefWidth="360.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #ec4899, #7c3aed); -fx-background-radius: 15;" text="Login" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font></Button>
-            <ImageView fitHeight="27.0" fitWidth="17.0" layoutX="423.0" layoutY="251.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../assets/1-login.png" />
-               </image>
-            </ImageView>
-            <Text fill="WHITE" layoutX="344.0" layoutY="310.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Don`t have an account? " wrappingWidth="281.78204345703125">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Text>
-            <Text fill="WHITE" layoutX="278.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Text>
-            <Text fx:id="registerPage" layoutX="507.0" layoutY="309.0" onDragDetected="#toRegisterPage" strokeType="OUTSIDE" strokeWidth="0.0" text="Register here" underline="true">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Text>
-         </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </Pane>
-   </center>
-   <padding>
-      <Insets top="20.0" />
-   </padding>
 </BorderPane>
