--- a/src/main/resources/com/mycompany/tictactoe/views/Login.fxml
+++ b/src/main/resources/com/mycompany/tictactoe/views/Login.fxml
@@ -85,7 +85,7 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Text>
-            <Text fx:id="registerPage" fill="WHITE" layoutX="485.0" layoutY="310.0" onDragDetected="#toRegisterPage" strokeType="OUTSIDE" strokeWidth="0.0" text="Register here" underline="true">
+            <Text fx:id="registerPage" fill="WHITE" layoutX="485.0" layoutY="310.0" onMouseClicked="#toRegisterPage" strokeType="OUTSIDE" strokeWidth="0.0" text="Register here" underline="true">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Text>
